allow selection on zero range palette (reported by Francisco Borges, cf. bug #1116257)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2044 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -99,6 +99,8 @@ TODO:
     - completely rewritten
   - pswriter module: new
     - separate PS output from canvas
+  - color module:
+    - allow selection on zero range palette (reported by Francisco Borges, cf. bug #1116257)
 
 
 0.7.1 (2004/12/15):
