--- a/CHANGES
+++ b/CHANGES
@@ -101,6 +101,9 @@ TODO:
     - separate PS output from canvas
   - color module:
     - allow selection on zero range palette (reported by Francisco Borges, cf. bug #1116257)
+  - graph modules:
+    - graph styles:
+      - addontop added to stackedbarpos; TODO: documentation
 
 
 0.7.1 (2004/12/15):
