Replace prolog module by new, more generic resource module and replace prolog methods by new registerresources methods. This is a first cut of the new resource system.
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2067 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -104,6 +104,9 @@ TODO:
   - graph modules:
     - graph styles:
       - addontop added to stackedbarpos; TODO: documentation
+  - prolog module: deleted
+  - resource module: new
+    - resources: fonts and definitions
 
 
 0.7.1 (2004/12/15):
