--- a/INSTALL
+++ b/INSTALL
@@ -5,9 +5,9 @@ Installation
 Prerequisites
 -------------
 
-PyX needs Python 2.x and a TeX installation (including Type1 fonts). Try to
-start 'python', 'tex' and 'kpsewhich cmr10.pfb' (the later should issue a full
-path of the requested Type1 font).
+PyX needs Python 2.1 or newer and a TeX installation (including Type1 fonts).
+Try to start 'python', 'tex' and 'kpsewhich cmr10.pfb' (the later should issue
+a full path of the requested Type1 font).
 
 
 Local usage without C extension modules
@@ -34,18 +34,18 @@ no C extension modules are built and appropriate fallbacks will be used instead.
 
 The build_t1strip option enables the t1strip extension module, which provides
 partial font downloading (i.e. only the glyphs of a font that are used are
-included in the eps file). The only requisites for building this module are the
-Python header files and a C compiler. Note that the C compiler has to suit
-the Python distribution you are using.
+included in the resulting EPS file). The only requisites for building this
+module are the Python header files and a C compiler. Note that the C compiler
+has to suit the Python distribution you are using.
 
 The second extension module pykpathsea provides Python binding for the kpathsea
 library, which enables fast searching for files in the TeX/LaTeX directory
-hierarchy. You will need the header files of this library, which are not
-included in many standard TeX distributions. Besides that, the fallback, which
-uses the kpsewhich program, works equally well, although it is not as efficient
-as using the library directly. If you want to build the C extension module, you
-may also have to specify the location of the kpathsea header files and of the
-library itself in the setup.cfg file.
+hierarchy. You will need the header files of this library, which unfortunately
+are not included in many standard TeX distributions. Note that the fallback,
+which uses the kpsewhich program, works equally well, although it is not as
+efficient as using the library directly. If you want to build the C extension
+module, you may also have to specify the location of the kpathsea header files
+and of the library itself in the setup.cfg file.
 
 After you have adapted the setup.cfg file to your needs, you can either build
 the extension modules locally by running
@@ -83,7 +83,7 @@ into the manual directory
     ln -s </usr/lib/>python/doc/tools/mkhowto mkhowto
     make
 
-Note that this requires Python version 2.3 and above. In former versions you
-will need to get the Python documentation sources separately from
+Note that this requires Python version 2.3 and above. When using older Python
+versions you need to get the Python documentation sources separately from
 http://www.python.org/ and try to find the script there. Alternatively you may
 download the manual from the PyX homepage at http://pyx.sourceforge.net/.
