some further work on the graph design and axis data extraction -- still under heavy develoment and particially broken
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2082 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -109,6 +109,7 @@ TODO:
       - histogram style added; TODO documentation
     - graph data:
       - function needs explicit variable definition (implicit variable definition is deprecated); TODO: documentation
+      - column names are inherited; unused columns are silently ignored now
   - prolog module: deleted (replaced by resource module)
   - resource module: new
     - resources: fonts and definitions
