--- a/CHANGES
+++ b/CHANGES
@@ -103,13 +103,21 @@ TODO:
     - allow selection on zero range palette (reported by Francisco Borges, cf. bug #1116257)
   - graph modules:
     - graph styles:
-      - addontop added to stackedbarpos; TODO: documentation
-      - column -> columnname renaming where appropriate; TODO: documentation
-      - histogram style added; TODO documentation
-      - major cleanup of bar axes: be less implicit and introduce nestedbar for nested bar axes
+      - addontop added to stackedbarpos
+      - column -> columnname renaming where appropriate
+      - histogram style added
     - graph data:
-      - function needs explicit variable definition (implicit variable definition is deprecated); TODO: documentation
-      - column names are inherited; unused columns are silently ignored now
+      - function needs explicit variable definition (implicit variable definition is deprecated)
+      - column names are inherited by data.data() except when copy=0; unused columns are silently ignored now
+      - dynamic function data on a logarithmic axis uses isinstance check now
+    - axis data handling refactureing:
+      - introcuded an axis positioner
+      - introduced anchoredaxis to make axis data and positioning local to a graph
+      - linkedaxis is a special version of anchoredaxis and are generic (they use the new linkpainter provided by an axis)
+      - unification of split and bar axes; removed some black magic in baraxis in favor of a nestedbar axis
+      - x linked to x2 etc. is now possible
+      - axis.inverse was removed (the only place it was (mis)used was by a function)
+    - TODO: update documentation
   - prolog module: deleted (replaced by resource module)
   - resource module: new
     - resources: fonts and definitions
