correctly call base class constructor in linewidth
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2091 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -134,6 +134,8 @@ TODO:
     - use warning module for warnings
   - tex module:
     - the very old tex module finally got removed completely
+  - style module:
+    - correctly call base class constructor in linewidth
 
 
 0.7.1 (2004/12/15):
