fix #1180691 reported by ralfu
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2112 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/graphics.tex
+++ b/manual/graphics.tex
@@ -86,7 +86,8 @@ the last point:
 %
 \begin{verbatim}
 rect2 = path.path(path.moveto(0, 0), path.lineto(0, 1), 
-                  path.lineto(1, 1), path.lineto(1, 0))
+                  path.lineto(1, 1), path.lineto(1, 0),
+                  path.lineto(0, 0))
 \end{verbatim}
 However, as one can see in the lower left corner of
 Fig.~\ref{fig:rects}b, the rectangle is still incomplete.  It needs to
