--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -25,6 +25,7 @@ Andr\'e Wobst}
 \begin{document}
 
 \maketitle
+\cleardoublepage
 
 \ifhtml % make abstract better available (as in the Python docs)
 \chapter*{Front Matter\label{front}}
