correct EOL handling while reading DSC's (reported by Markus Meyer)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2115 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -138,6 +138,8 @@ TODO:
     - the very old tex module finally got removed completely
   - style module:
     - correctly call base class constructor in linewidth
+  - epsfile module:
+    - correct EOL handling while reading DSC's (reported by Markus Meyer)
 
 
 0.7.1 (2004/12/15):
