fix parsing of empty strings in fontmap files (reported by John Owens, bug #1218983)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2119 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -131,6 +131,7 @@ TODO:
     - minimal dvitype.py
     - dvitype unit test
     - tfm->dvi conversion rounding bugfix
+    - fix parsing of empty strings ("") in fontmap files (reported by John Owens, bug #1218983)
   - changed requirements to python 2.1:
     - nested scopes are needed without fallback solution by the path module
     - use warning module for warnings
