- move pattern class to its own module - move PDFpattern to the new pattern module - renamed _compressstream to compressedstream to better reflect its usage   and exporting it to the other modules
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2156 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -138,6 +138,8 @@ TODO:
     - correctly call base class constructor in linewidth
   - epsfile module:
     - correct EOL handling while reading DSC's (reported by Markus Meyer)
+  - pattern module: new
+    - moved canvas.pattern to its own module together with the new PDFpattern class
   - update address of FSF in LICENSE file
 
 
