added arct-Problem and discussed deformers
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2168 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -49,6 +49,7 @@ TODO:
   - deformer module:
     - better names for the helper functions ?
     - why does smoothed through away short normpathitems instead of simply ignoring them?
+      Where is the difference? [MS]
   - open discussion:
     - clearly distingish between readers and writers. dvifile, epsfile, etc. might
       be renamed to dvireader, epsreader ...
@@ -85,6 +86,7 @@ TODO:
 0.8 (????/??/??):
   - path module:
     - path parameters and argument handling
+    - repair normpath-conversion of arct
   - document module: new
     - container classes for document and pages
     - document.paperformat class (strings are deprecated)
